<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Universal Messenger</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="create_new">Create New</string>
    <string name="open">Open</string>
    <string name="file">File</string>
    <string name="create_new">Create New</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="signin">Sign-in</string>
    <string name="signup">Sign-up</string>
    <string name="search">Search</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="sign_up_username">enter_signup_info</string>
	<string name="title_activity_display_message">My Message</string>
	<string name="successful_signup">successfulsignup</string>
	<string name="successful_signin">successfulsignin</string>
	<string name="error">error</string>
	<string name="send">send</string>
	<string name="search">search</string>
	<string name="signup">signup</string>
	<string name="alreadyRegistered">alreadyRegistered</string>
	<string name="signin">signin</string>
	<string name="usernotfound">usernotfound</string>
	<string name="sessionid">sessionid</string>
	<string name="list">list</string>
	<string name="successfulsignin">successfulsignin</string>
	<string name="successfulsignup">successfulsignup</string>
	<string name="successfullsend">successfullsend</string>
	<string name="destinationnotfound">destinationnotfound</string>
	<string name="addfriend">addfriend</string>
	<string name="timeoutexception">timeoutexception</string>	
	<string name="executionexecption">executionexecption</string>	
	<string name="interruptionexecption">interruptionexecption</string>	
			
</resources>
